<resources>
    <string name="app_name">AppVentas</string>
    <string name="str_noNick">Campo \"Usuario\" requerido</string>
    <string name="login">Login</string>
    <string name="admin">Administrador</string>
    <string name="str_noPass">Campo \"Password\" requerido</string>
    <string name="str_UsuaNo">Usuario no encontrado</string>
    <string name="str_IP" translatable="true">192.168.43.201</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="altaEmpl">Alta Empleado</string>
    <string name="listaEmpl">Lista Empleados</string>
    <string name="Empleado">Empleados</string>
    <string name="CRUDEmpleado">Administrar Empleados</string>
    <string name="Cliente">Clientes</string>
    <string name="CRUDCliente">Administrar Clientes</string>
    <string name="Producto">Productos</string>
    <string name="CRUDProducto">Administrar Productos</string>
    <string name="Pedido">Pedidos</string>
    <string name="CRUDPedido">Administrar Pedidos</string>
    <string name="Rol">Roles</string>
    <string name="CRUDRol">Administrar Roles</string>
    <string name="Ruta">Rutas</string>
    <string name="CRUDRutas">Administrar Rutas</string>
    <string name="muestrEmpl">Muestra Empleados</string>
    <string name="AltaEmpleado">Agrega nuevo Empleado</string>
    <string name="listaProd">Lista Productos</string>
    <string name="muestrProd">Muestra Productos</string>
    <string name="altaProd">Alta Producto</string>
    <string name="AltaProduc">Agrega nuevo producto</string>
    <string name="listaClientes">Lista Clientes</string>
    <string name="muestrClien">Muestra Clientes</string>
    <string name="altaClie">Alta Cliente</string>
    <string name="AltaClientes">Agrega nuevo Cliente</string>
    <string name="Genero">Generos</string>
    <string name="CRUDGeneros">Administrar Generos</string>
    <string name="Usuario">Usuarios</string>
    <string name="CRUDUsuarios">Administrar Usuarios</string>
    <string name="title_activity_genero">Genero</string>
    <string name="listaGener">Lista Generos</string>
    <string name="muestrGen">Muestra Generos</string>
    <string name="altaGen">Alta Genero</string>
    <string name="AltaGenero">Agrega nuevo Genero</string>
    <string name="listaUsuarios">Lista Usuarios</string>
    <string name="muestrUsuarios">Muestra Usuarios</string>
    <string name="altaUsuario">Alta Usuario</string>
    <string name="AltaUsuarios">Agrega nuevo usuario</string>
    <string name="listaPedidos">Lista Pedidos</string>
    <string name="muestrPedidos">Muestra Pedido</string>
    <string name="altaPedido">Alta Pedido</string>
    <string name="altaPedidos">Agrega Nuevo Pedido</string>
    <string name="listaRoles">LIsta Roles</string>
    <string name="muestrRoles">Muestra Roles</string>
    <string name="altaRol">Alta Rol</string>
    <string name="AltaRoles">Agrega nuevo rol</string>
    <string name="listaRutas">Lista Rutas</string>
    <string name="muestrRutas">Muestra Rutas</string>
    <string name="altaRuta">Alta Ruta</string>
    <string name="AltaRutas">Agrega nueva ruta</string>
    <string name="EmpleadosRoles">Empleados - Roles</string>
    <string name="CRUDEmpleadosRoles">Administrar Empleados - Roles</string>
    <string name="UpdateCliente">Actualizar Cliente</string>
    <string name="actuaEmplea">Actualiza Empleado</string>
    <string name="actuaProducto">Actualiza Producto</string>
    <string name="actuaRol">Actualiza Rol</string>
    <string name="actuaRuta">Actualiza Ruta</string>
    <string name="ActuaGenero">Actualiza Genero</string>
    <string name="ClienteRuta">Rutas - Clientes</string>
    <string name="CRUDRutaCliente">Administrar Rutas -  Clientes</string>
    <string name="EmpleadoPedido">Empleados - Pedidos</string>
    <string name="CRUDEmpleado_Pedido">Administrar Empleados - Pedidos</string>
    <string name="CRUDEmpleado_Rol">Administrar Empleados - Roles</string>
    <string name="listaRutasClientes">Lista Rutas - Clientes</string>
    <string name="muestrRutasClien">Muestra Rutas - Clientes</string>
    <string name="altaRutaClie">Alta Ruta - Cliente</string>
    <string name="AltaRUtaClientes">Asigna Clientes a Rutas</string>
    <string name="pisicionClientes">Ubicacion Clientes</string>
    <string name="muestraMapas">Muestra en mapa la ubicacion de los clientes</string>
    <string name="selecionaRuta">Selecciona la ruta para mostrar clientes</string>
    <string name="title_activity_mapas_rutas_clientes">Map</string>
    <string name="strVistaNormal">Vista Normal</string>
    <string name="strVistaSatelite">Vista Satelite</string>
    <string name="strVistaHibrida">Vista Hibrida</string>
    <string name="strVistaRelieve">Vista Relieve</string>
    <string name="NoTienesCuenta">No tienes una cuenta? Registrate</string>
    <string name="Registro">Registro de empleado</string>
    <string name="NombreCreador">Jose Hugo Sanchez Estrella</string>
    <string name="strITCS">http://itcelaya.edu.mx/</string>
    <string name="stremail">josehugo123@hotmail.com</string>
    <string name="strPhone">429 113 1976</string>
    <string name="listaEmplRoles">Lista Empleados - Roles</string>
    <string name="muestrEmplRoles">Muestra Empleados - Roles</string>
    <string name="altaEmplRol">Alta Empleado - Rol</string>
    <string name="AltaEmpleadoRol">Agrega Empleado - Rol</string>
    <string name="dar_de_alta">Dar de alta</string>
    <string name="actuaRutasClientes">Actualiza Rutas - Clientes</string>
    <string name="AltaEmpleados">Alta Empleado</string>
    <string name="actuaEmpleadoRol">Actualiza Empleado - Rol</string>
    <string name="selectCliente">Selecciona al cliente para mostrar sus pedidos</string>
    <string name="listaPedPorCliente">Lista pedidos por cliente</string>
    <string name="muestraPeddeCliente">Muestra los pedidos del cliente</string>
    <string name="selectClienteLevPedi">Seleccione un cliente para levantar un pedido</string>
    <string name="listaPedidosPorCliente">Lista pedidos por cliente</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Acerca">Acerca de...</string>
    <string name="info">Info del desarrollador</string>
    <string name="strdescCreado">Estudiante de la carrera de Ing. en Sistemas computaciones en el Tecnologico de Celaya.</string>
    <string name="comunicate">Comunicate Conmigo :)</string>
    <string name="actuaPedido">Actualiza Pedido</string>
    <string name="app_ventas">App Ventas</string>


</resources>
