<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/yo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            android:text="@string/NombreCreador"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgLogin"
            android:layout_marginTop="30dp"

            />


        <TextView
            android:id="@+id/txtWebTec"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/strITCS"
            android:layout_below="@id/txtNombre"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold|italic"
            android:textColor="@color/blue_leve"
            />

        <TextView
            android:id="@+id/txtEmailHugo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/stremail"
            android:layout_below="@id/txtWebTec"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue_leve"

            />

        <TextView
            android:id="@+id/txtPhoneHugo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/strPhone"
            android:layout_below="@id/txtEmailHugo"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold|italic"
            android:textColor="@color/blue_leve"
            />

        <ImageView
            android:id="@+id/imgYO"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/logo"
            android:layout_marginTop="80dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/txtPhoneHugo"
            />







    </RelativeLayout>



</android.support.constraint.ConstraintLayout>