<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hugopc.appventas.AltaRutaClienteActivity"
    android:background="#fcfcfc">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:theme="@style/AppThemeCliente"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/colappsingtoolbar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorAccent"
            app:title="@string/altaRutaClie"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:background="@drawable/baccmaterialpink">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarid"
                app:popupTheme="@style/AppThemeCliente"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            >

            <ImageView
                android:id="@+id/imgRutas"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/ruta"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/AltaClientes" />


            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/listaRutas"
                android:textStyle="italic"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:textColor="#020202"
                android:layout_below="@id/imgRutas"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:id="@+id/spinnerRutas2"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_below="@id/txt1"
                android:layout_centerHorizontal="true"
                >
            </Spinner>

            <ImageView
                android:id="@+id/imgClientes"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_below="@id/spinnerRutas2"
                android:contentDescription="@string/altaRutaClie" />


            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/listaClientes"
                android:textStyle="italic"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:textColor="#020202"
                android:layout_below="@id/imgClientes"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:id="@+id/spinnerClientes"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_below="@id/txt2"
                android:layout_centerHorizontal="true"
                >
            </Spinner>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAltaRutaCliente"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/spinnerClientes"
                android:layout_centerHorizontal="true"
                android:theme="@style/MyButton"
                android:text="@string/dar_de_alta"
                />




        </RelativeLayout>





    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>